MagicTractorPlugin bootstraps using an older version